removed all dependencies on Accumulo